--- a/Ciencia_Analitica_Datos/Analisis_Datos_Pandas/Analisis_Datos_Pandas.ipynb
+++ b/Ciencia_Analitica_Datos/Analisis_Datos_Pandas/Analisis_Datos_Pandas.ipynb
@@ -2027,6 +2027,22 @@
     "id": "L0EtgOVIfzRd"
    },
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##adding blank comment "
+   ]
   }
  ],
  "metadata": {
