add firebase code

--- a/Ciencia_Analitica_Datos/manipulacion_bd/Actividad3BDManipulacion.ipynb
+++ b/Ciencia_Analitica_Datos/manipulacion_bd/Actividad3BDManipulacion.ipynb
@@ -97,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pymysql in c:\\users\\user\\anaconda3\\lib\\site-packages (1.1.0)\n",
+      "Requirement already satisfied: pymysql in c:\\users\\angel\\anaconda3\\lib\\site-packages (1.1.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -1295,12 +1295,12 @@
      "data": {
       "text/plain": [
        "customerName\n",
-       "CAF Imports                   23375.570000\n",
-       "Corrida Auto Replicas, Ltd    37480.030000\n",
+       "CAF Imports                       23375.57\n",
+       "Corrida Auto Replicas, Ltd        37480.03\n",
        "Enaco Distributors            22840.156667\n",
        "Euro+ Shopping Channel        55056.844615\n",
-       "Iberia Gift Imports, Corp.    25493.925000\n",
-       "Name: amount, dtype: float64"
+       "Iberia Gift Imports, Corp.       25493.925\n",
+       "Name: amount, dtype: object"
       ]
      },
      "execution_count": 30,
@@ -1337,19 +1337,7 @@
    "metadata": {
     "id": "zg6TG4-lgz0p"
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'firebase_admin'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [31]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mfirebase_admin\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfirebase_admin\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m credentials\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfirebase_admin\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m firestore\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'firebase_admin'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import firebase_admin\n",
     "from firebase_admin import credentials\n",
@@ -1374,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1384,26 +1372,26 @@
    },
    "outputs": [],
    "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
+    "#from google.colab import drive\n",
+    "#drive.mount('/content/drive')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "id": "fIMrBjtorL6i"
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "DIR = \"/content/drive/MyDrive/Colab Notebooks/MNA/TC4029 - Ciencia y analítica de datos/Semana 3/Actividad3_BD_Manipulacion\"\n",
-    "os.chdir(DIR)"
+    "#import os\n",
+    "#DIR = \"/content/drive/MyDrive/Colab Notebooks/MNA/TC4029 - Ciencia y analítica de datos/Semana 3/Actividad3_BD_Manipulacion\"\n",
+    "#os.chdir(DIR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "id": "2ceIh9jxndea"
    },
@@ -1425,13 +1413,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "id": "T7T1z45kISDh"
    },
    "outputs": [],
    "source": [
-    "#add blank comment"
+    "#reading PET_OWNER\n",
+    "collection = db.collection('PET_OWNER').stream()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = [[]]\n",
+    "for data in collection:\n",
+    "    new=[f'{{}}'.format(data.id),f'{{}}'.format(data.get('email')),f'{{}}'.format(data.get('phone')),f'{{}}'.format(data.get('ownerFirstName')),f'{{}}'.format(data.get('ownerLastName'))]\n",
+    "    lista.append(new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0D6yFSs2eu4nYwf2dnQ0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>555-454-3465</td>\n",
+       "      <td>Sam</td>\n",
+       "      <td>Taylor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>98357ufgjmWUxjnAuzbz</td>\n",
+       "      <td>miles.trent@somewhere.com</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Miles</td>\n",
+       "      <td>Trent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AFtZincSZxjC4Mcxf9Pf</td>\n",
+       "      <td>liz.frier@somewhere.com</td>\n",
+       "      <td>555-537-6543</td>\n",
+       "      <td>Liz</td>\n",
+       "      <td>Frier</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GYDixDwHjMyihjL8TmsM</td>\n",
+       "      <td>None</td>\n",
+       "      <td>555-454-1243</td>\n",
+       "      <td>Jenny</td>\n",
+       "      <td>Mayberry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>IpxTuB6FILhwQFcspLws</td>\n",
+       "      <td>'marcha.downs@somewhere.com</td>\n",
+       "      <td>555-537-8765</td>\n",
+       "      <td>Marsha</td>\n",
+       "      <td>Downs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>QoXBfS1JdRp6BqgLzaAz</td>\n",
+       "      <td>None</td>\n",
+       "      <td>555-454-2354</td>\n",
+       "      <td>Ken</td>\n",
+       "      <td>Roberts</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>eUtZ44lPRbSHXX04EDp7</td>\n",
+       "      <td>nigel.melnik@somewhere.com</td>\n",
+       "      <td>555-232-5678</td>\n",
+       "      <td>Nigel</td>\n",
+       "      <td>Melnik</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>n2GG9rlfGOmE0P4TcU0T</td>\n",
+       "      <td>richard.james@somewhere.com</td>\n",
+       "      <td>555-537-7654</td>\n",
+       "      <td>Richard</td>\n",
+       "      <td>James</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>pDlJlul8EJXO8FBJvFkN</td>\n",
+       "      <td>jim.rogers@somewhere.com</td>\n",
+       "      <td>555-232-3456</td>\n",
+       "      <td>Jim</td>\n",
+       "      <td>Rogers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>tAlJ74xQ7tT4TUHwZgmH</td>\n",
+       "      <td>mary.keenan@somewhere.com</td>\n",
+       "      <td>555-232-4567</td>\n",
+       "      <td>Mary</td>\n",
+       "      <td>Keenan</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       0                            1             2        3  \\\n",
+       "1   0D6yFSs2eu4nYwf2dnQ0                         None  555-454-3465      Sam   \n",
+       "2   98357ufgjmWUxjnAuzbz    miles.trent@somewhere.com          None    Miles   \n",
+       "3   AFtZincSZxjC4Mcxf9Pf      liz.frier@somewhere.com  555-537-6543      Liz   \n",
+       "4   GYDixDwHjMyihjL8TmsM                         None  555-454-1243    Jenny   \n",
+       "5   IpxTuB6FILhwQFcspLws  'marcha.downs@somewhere.com  555-537-8765   Marsha   \n",
+       "6   QoXBfS1JdRp6BqgLzaAz                         None  555-454-2354      Ken   \n",
+       "7   eUtZ44lPRbSHXX04EDp7   nigel.melnik@somewhere.com  555-232-5678    Nigel   \n",
+       "8   n2GG9rlfGOmE0P4TcU0T  richard.james@somewhere.com  555-537-7654  Richard   \n",
+       "9   pDlJlul8EJXO8FBJvFkN     jim.rogers@somewhere.com  555-232-3456      Jim   \n",
+       "10  tAlJ74xQ7tT4TUHwZgmH    mary.keenan@somewhere.com  555-232-4567     Mary   \n",
+       "\n",
+       "           4  \n",
+       "1     Taylor  \n",
+       "2      Trent  \n",
+       "3      Frier  \n",
+       "4   Mayberry  \n",
+       "5      Downs  \n",
+       "6    Roberts  \n",
+       "7     Melnik  \n",
+       "8      James  \n",
+       "9     Rogers  \n",
+       "10    Keenan  "
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(lista)\n",
+    "df= df.dropna()\n",
+    "df"
    ]
   },
   {
@@ -1465,7 +1621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
