--- a/01_ciencia_analitica_datos/mod03_2_preprocesamiento/entregable/Actividad5Preprocesamiento.ipynb
+++ b/01_ciencia_analitica_datos/mod03_2_preprocesamiento/entregable/Actividad5Preprocesamiento.ipynb
@@ -1089,6 +1089,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Asimetria positiva"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "PbEJw57zAjKb"
    },
