--- a/01_ciencia_analitica_datos/mod03_2_preprocesamiento/entregable/Actividad5Preprocesamiento.ipynb
+++ b/01_ciencia_analitica_datos/mod03_2_preprocesamiento/entregable/Actividad5Preprocesamiento.ipynb
@@ -1407,6 +1407,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       48.0\n",
+       "1       58.0\n",
+       "2       67.0\n",
+       "3       59.0\n",
+       "4       59.0\n",
+       "        ... \n",
+       "1005    57.0\n",
+       "1006    80.0\n",
+       "1007    75.0\n",
+       "1008    58.0\n",
+       "1009    72.0\n",
+       "Name: Weight, Length: 1010, dtype: float64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Weight'].fillna(df.Weight.mean())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "lUN8erGWDT0E"
